--- a/ticketcard.ui
+++ b/ticketcard.ui
@@ -5,15 +5,24 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="ticketTitleLabel">
+     <property name="styleSheet">
+      <string>font-size: 16px; font-weight: bold;</string>
+     </property>
      <property name="text">
       <string>Заголовок тикета</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QTextEdit" name="ticketDescription">
-     <property name="placeholderText">
-      <string>Описание тикета...</string>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QTextEdit { background: transparent; border: none; }</string>
      </property>
     </widget>
    </item>
@@ -27,16 +36,14 @@
       <item row="0" column="1"><widget class="QLabel" name="labelProjectValue"/></item>
       <item row="1" column="0"><widget class="QLabel"><property name="text"><string>Трекер</string></property></widget></item>
       <item row="1" column="1"><widget class="QLabel" name="labelTrackerValue"/></item>
-      <item row="2" column="0"><widget class="QLabel"><property name="text"><string>Название</string></property></widget></item>
-      <item row="2" column="1"><widget class="QLabel" name="labelTitleValue"/></item>
-      <item row="3" column="0"><widget class="QLabel"><property name="text"><string>Статус</string></property></widget></item>
-      <item row="3" column="1"><widget class="QLabel" name="labelStatusValue"/></item>
-      <item row="4" column="0"><widget class="QLabel"><property name="text"><string>Приоритет</string></property></widget></item>
-      <item row="4" column="1"><widget class="QLabel" name="labelPriorityValue"/></item>
-      <item row="5" column="0"><widget class="QLabel"><property name="text"><string>Назначена</string></property></widget></item>
-      <item row="5" column="1"><widget class="QLabel" name="labelAssignedValue"/></item>
-      <item row="6" column="0"><widget class="QLabel"><property name="text"><string>Наблюдатель</string></property></widget></item>
-      <item row="6" column="1"><widget class="QLabel" name="labelObserverValue"/></item>
+      <item row="2" column="0"><widget class="QLabel"><property name="text"><string>Статус</string></property></widget></item>
+      <item row="2" column="1"><widget class="QLabel" name="labelStatusValue"/></item>
+      <item row="3" column="0"><widget class="QLabel"><property name="text"><string>Приоритет</string></property></widget></item>
+      <item row="3" column="1"><widget class="QLabel" name="labelPriorityValue"/></item>
+      <item row="4" column="0"><widget class="QLabel"><property name="text"><string>Назначена</string></property></widget></item>
+      <item row="4" column="1"><widget class="QLabel" name="labelAssignedValue"/></item>
+      <item row="5" column="0"><widget class="QLabel"><property name="text"><string>Наблюдатель</string></property></widget></item>
+      <item row="5" column="1"><widget class="QLabel" name="labelObserverValue"/></item>
      </layout>
     </widget>
    </item>
@@ -46,17 +53,55 @@
       <string>Файлы</string>
      </property>
      <layout class="QVBoxLayout" name="filesLayout">
+      <item><widget class="QListWidget" name="fileList"/></item>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="historyBox">
+     <property name="title">
+      <string>История</string>
+     </property>
+     <layout class="QVBoxLayout" name="verticalLayout_historyGroup">
       <item>
-       <widget class="QListWidget" name="fileList"/>
+       <widget class="QScrollArea" name="historyScrollArea">
+        <property name="widgetResizable">
+         <bool>true</bool>
+        </property>
+        <widget class="QWidget" name="historyScrollContents">
+         <layout class="QVBoxLayout" name="historyLayout"/>
+        </widget>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="editButton">
+        <property name="text">
+         <string>Редактировать</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
-    <widget class="QTextEdit" name="historyText">
-     <property name="placeholderText">
-      <string>История изменений...</string>
+    <widget class="QWidget" name="editPanel">
+     <property name="visible">
+      <bool>false</bool>
      </property>
+     <layout class="QFormLayout" name="editFormLayout">
+      <item row="0" column="0"><widget class="QLabel"><property name="text"><string>Статус</string></property></widget></item>
+      <item row="0" column="1"><widget class="QComboBox" name="editStatus"/></item>
+      <item row="1" column="0"><widget class="QLabel"><property name="text"><string>Приоритет</string></property></widget></item>
+      <item row="1" column="1"><widget class="QComboBox" name="editPriority"/></item>
+      <item row="2" column="0"><widget class="QLabel"><property name="text"><string>Назначена</string></property></widget></item>
+      <item row="2" column="1"><widget class="QComboBox" name="editAssignee"/></item>
+      <item row="3" column="0"><widget class="QLabel"><property name="text"><string>Наблюдатель</string></property></widget></item>
+      <item row="3" column="1"><widget class="QComboBox" name="editWatcher"/></item>
+      <item row="4" column="0"><widget class="QLabel"><property name="text"><string>Трекер</string></property></widget></item>
+      <item row="4" column="1"><widget class="QComboBox" name="editTracker"/></item>
+      <item row="5" column="0"><widget class="QLabel"><property name="text"><string>Название</string></property></widget></item>
+      <item row="5" column="1"><widget class="QLineEdit" name="editTitle"/></item>
+     </layout>
     </widget>
    </item>
    <item>
