настроил создание тикета

--- a/createticketdialog.ui
+++ b/createticketdialog.ui
@@ -2,22 +2,14 @@
 <ui version="4.0">
  <class>CreateTicketDialog</class>
  <widget class="QDialog" name="CreateTicketDialog">
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>600</width>
-    <height>500</height>
-   </rect>
-  </property>
   <property name="windowTitle">
-   <string>Создать тикет</string>
+   <string>Создание тикета</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="labelProject">
      <property name="text">
-      <string>Проект *</string>
+      <string>Проект</string>
      </property>
     </widget>
    </item>
@@ -28,7 +20,7 @@
    <item row="1" column="0">
     <widget class="QLabel" name="labelTracker">
      <property name="text">
-      <string>Трекер *</string>
+      <string>Трекер</string>
      </property>
     </widget>
    </item>
@@ -37,79 +29,57 @@
    </item>
 
    <item row="2" column="0">
-    <widget class="QLabel" name="labelTitle">
+    <widget class="QLabel" name="labelStatus">
      <property name="text">
-      <string>Название *</string>
+      <string>Статус</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QLineEdit" name="titleEdit"/>
+    <widget class="QComboBox" name="statusCombo"/>
    </item>
 
    <item row="3" column="0">
-    <widget class="QLabel" name="labelStatus">
+    <widget class="QLabel" name="labelPriority">
      <property name="text">
-      <string>Статус *</string>
+      <string>Приоритет</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QComboBox" name="statusCombo"/>
+    <widget class="QComboBox" name="priorityCombo"/>
    </item>
 
    <item row="4" column="0">
-    <widget class="QLabel" name="labelPriority">
+    <widget class="QLabel" name="labelAssignee">
      <property name="text">
-      <string>Приоритет *</string>
+      <string>Назначена</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QComboBox" name="priorityCombo"/>
+    <widget class="QComboBox" name="assigneeCombo"/>
    </item>
 
    <item row="5" column="0">
-    <widget class="QLabel" name="labelAssignee">
+    <widget class="QLabel" name="labelWatcher">
      <property name="text">
-      <string>Назначена *</string>
+      <string>Наблюдатель</string>
      </property>
     </widget>
    </item>
    <item row="5" column="1">
-    <widget class="QComboBox" name="assigneeCombo"/>
-   </item>
-
-   <item row="6" column="0">
-    <widget class="QLabel" name="labelWatcher">
-     <property name="text">
-      <string>Наблюдатель *</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1">
     <widget class="QComboBox" name="watcherCombo"/>
    </item>
 
-   <item row="7" column="0">
-    <widget class="QLabel" name="labelDescription">
-     <property name="text">
-      <string>Описание</string>
-     </property>
-    </widget>
-   </item>
-   <item row="7" column="1">
-    <widget class="QTextEdit" name="descriptionEdit"/>
-   </item>
-
-   <item row="8" column="0">
+   <item row="6" column="0">
     <widget class="QLabel" name="labelStartDate">
      <property name="text">
       <string>Дата начала</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="6" column="1">
     <widget class="QDateEdit" name="startDateEdit">
      <property name="calendarPopup">
       <bool>true</bool>
@@ -117,27 +87,52 @@
     </widget>
    </item>
 
-   <item row="9" column="0" colspan="2">
-    <widget class="QPushButton" name="attachButton">
+   <item row="7" column="0">
+    <widget class="QLabel" name="labelTitle">
      <property name="text">
-      <string>Прикрепить файл</string>
+      <string>Название</string>
      </property>
     </widget>
+   </item>
+   <item row="7" column="1">
+    <widget class="QLineEdit" name="titleEdit"/>
    </item>
 
-   <item row="10" column="0">
-    <widget class="QPushButton" name="confirmButton">
+   <item row="8" column="0">
+    <widget class="QLabel" name="labelDescription">
      <property name="text">
-      <string>Подтвердить</string>
+      <string>Описание</string>
      </property>
     </widget>
    </item>
-   <item row="10" column="1">
-    <widget class="QPushButton" name="cancelButton">
-     <property name="text">
-      <string>Отменить</string>
-     </property>
-    </widget>
+   <item row="8" column="1">
+    <widget class="QPlainTextEdit" name="descriptionEdit"/>
+   </item>
+
+   <item row="9" column="0" colspan="2">
+    <layout class="QHBoxLayout" name="buttonLayout">
+     <item>
+      <widget class="QPushButton" name="confirmButton">
+       <property name="text">
+        <string>Создать</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="cancelBtn">
+       <property name="text">
+        <string>Отмена</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="attachBtn">
+       <property name="text">
+        <string>Прикрепить файл</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
