feat(): добавил историю тикета, косметические правки и рефакторинг кода

--- a/createticketdialog.ui
+++ b/createticketdialog.ui
@@ -9,7 +9,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="labelProject">
      <property name="text">
-      <string>Проект</string>
+      <string>Проект*</string>
      </property>
     </widget>
    </item>
@@ -20,7 +20,7 @@
    <item row="1" column="0">
     <widget class="QLabel" name="labelTracker">
      <property name="text">
-      <string>Трекер</string>
+      <string>Трекер*</string>
      </property>
     </widget>
    </item>
@@ -31,7 +31,7 @@
    <item row="2" column="0">
     <widget class="QLabel" name="labelStatus">
      <property name="text">
-      <string>Статус</string>
+      <string>Статус*</string>
      </property>
     </widget>
    </item>
@@ -42,7 +42,7 @@
    <item row="3" column="0">
     <widget class="QLabel" name="labelPriority">
      <property name="text">
-      <string>Приоритет</string>
+      <string>Приоритет*</string>
      </property>
     </widget>
    </item>
@@ -53,7 +53,7 @@
    <item row="4" column="0">
     <widget class="QLabel" name="labelAssignee">
      <property name="text">
-      <string>Назначена</string>
+      <string>Назначена*</string>
      </property>
     </widget>
    </item>
@@ -64,7 +64,7 @@
    <item row="5" column="0">
     <widget class="QLabel" name="labelWatcher">
      <property name="text">
-      <string>Наблюдатель</string>
+      <string>Наблюдатель*</string>
      </property>
     </widget>
    </item>
@@ -75,7 +75,7 @@
    <item row="6" column="0">
     <widget class="QLabel" name="labelStartDate">
      <property name="text">
-      <string>Дата начала</string>
+      <string>Дата начала*</string>
      </property>
     </widget>
    </item>
@@ -90,7 +90,7 @@
    <item row="7" column="0">
     <widget class="QLabel" name="labelTitle">
      <property name="text">
-      <string>Название</string>
+      <string>Название*</string>
      </property>
     </widget>
    </item>
