--- a/tickettable.ui
+++ b/tickettable.ui
@@ -3,24 +3,21 @@
  <class>TicketTableForm</class>
  <widget class="QWidget" name="TicketTableForm">
   <layout class="QVBoxLayout" name="verticalLayout">
+
+   <!-- Основная таблица -->
    <item>
     <widget class="QTableView" name="tableView">
-     <property name="showGrid">
-      <bool>true</bool>
-     </property>
      <property name="styleSheet">
       <string notr="true">
 QTableView {
     border: none;
-<!--    gridline-color: black;-->
+    gridline-color: black;
 }
 
 QHeaderView::section {
     border: 1px solid black;
-}
-
-QTableView::item {
-    border: none;
+    background: #f0f0f0;
+    font-weight: bold;
 }
 
 QTableCornerButton::section {
@@ -28,20 +25,81 @@ QTableCornerButton::section {
 }
       </string>
      </property>
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+     <property name="showGrid">
+      <bool>true</bool>
      </property>
      <property name="minimumSize">
       <size>
-       <width>500</width>
+       <width>600</width>
        <height>200</height>
       </size>
      </property>
     </widget>
    </item>
+
+   <!-- Отступ -->
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+
+   <!-- Заголовок завершённых -->
+   <item>
+    <widget class="QLabel" name="labelDone">
+     <property name="text">
+      <string>Завершённые задачи</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font-weight: bold; font-size: 14px;</string>
+     </property>
+    </widget>
+   </item>
+
+   <!-- Таблица завершённых -->
+   <item>
+    <widget class="QTableView" name="doneTableView">
+     <property name="styleSheet">
+      <string notr="true">
+QTableView {
+    border: none;
+    gridline-color: black;
+}
+
+QHeaderView::section {
+    border: 1px solid black;
+    background: #f0f0f0;
+    font-weight: bold;
+}
+
+QTableCornerButton::section {
+    border: none;
+}
+      </string>
+     </property>
+     <property name="showGrid">
+      <bool>true</bool>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>600</width>
+       <height>200</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+
   </layout>
  </widget>
  <resources/>
