--- a/tickettable.ui
+++ b/tickettable.ui
@@ -4,6 +4,20 @@
  <widget class="QWidget" name="TicketTableForm">
   <layout class="QVBoxLayout" name="verticalLayout">
 
+  <item>
+   <widget class="QLabel" name="labelDone">
+    <property name="text">
+     <string>Текущие задачи</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font-weight: bold; font-size: 14px;</string>
+    </property>
+   </widget>
+  </item>
+
    <!-- Основная таблица -->
    <item>
     <widget class="QTableView" name="tableView">
@@ -37,19 +51,22 @@ QTableCornerButton::section {
     </widget>
    </item>
 
-   <!-- Отступ -->
+   <!-- Отступ (фиксированная высота) -->
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
+    <widget class="QWidget" name="spacerWidget">
+     <property name="minimumSize">
       <size>
-       <width>20</width>
-       <height>20</height>
+       <width>0</width>
+       <height>5</height>
       </size>
      </property>
-    </spacer>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>5</height>
+      </size>
+     </property>
+    </widget>
    </item>
 
    <!-- Заголовок завершённых -->
